--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MonitoringStudentProgressApp</string>
+    <string name="TitleApp">Мониторинг успеваемости</string>
+    <string name="Save">Cохранить</string>
+    <string name="Add">Добавить</string>
 </resources>
