--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">MonitoringStudentProgressApp</string>
-    <string name="titleApp">Мониторинг успеваемости</string>
-    <string name="save">Cохранить</string>
-    <string name="add">Добавить</string>
-    <string name="download">Загрузить</string>
-    <string name="Subject1">Физика</string>
-    <string name="Subject2">Математика</string>
-    <string name="Subject3">Информатика</string>
-    <string name="Subject4">Геометкрия</string>
+    <string name="titleApp">Progress monitoring</string>
+    <string name="save">Save</string>
+    <string name="add">Add</string>
+    <string name="download">Download</string>
+    <string name="Subject1">Physics</string>
+    <string name="Subject2">Mathematics</string>
+    <string name="Subject3">Computer science</string>
+    <string name="Subject4">Geometry</string>
+    <string name="full_name">Full Name</string>
     <string-array name="KS">
         <item>0</item>
         <item>1</item>
